--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,3 +137,147 @@ TOP BAR
   }
 
 /*END SEARCH BUTTON BAR*/
+
+/*--------------------------------------------------------------
+# BUSINESS SECTION GALLERY
+--------------------------------------------------------------*/
+
+.section {
+    margin-top: -7%;
+    padding: 7rem 0;
+  }
+  
+  /** FILTERS - CATEGORIES ITEMS SECTION MENU **/
+  
+  .filters a {
+    color: #477B9D;
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px;
+    position: relative;
+  }
+  
+  .filters a:hover, .filters a:focus, .filters a:active {
+    text-decoration: none;
+  }
+  
+  .filters a:hover{
+    color: #1C3556;
+  }
+  .filters a:hover:before {
+    content: "";
+    position: absolute;
+    left: 5px;
+    right: 5px;
+    bottom: 0;
+    height: 1px;
+    background-color: #1C3556;
+  }
+  
+  .filters a.active {
+    color: #1C3556;
+  }
+  
+  .filters a.active:hover {
+    color: #477B9D;
+  }
+  
+  .filters a.active:before {
+    content: "";
+    position: absolute;
+    left: 5px;
+    right: 5px;
+    bottom: 0;
+    height: 1px;
+    background-color: #1C3556;
+  }
+  
+  .filters a.active:hover:before {
+    content: "";
+    position: absolute;
+    left: 5px;
+    right: 5px;
+    bottom: 0;
+    height: 1px;
+    background-color: #477B9D;
+  }
+  
+  /** END OF FILTERS - CATEGORIES ITEMS SECTION MENU **/
+  
+  /** BUSINESS ITEM SECTION 1 BY 1 // INFO ON HOVER **/
+  
+  .item {
+    border: none;
+    margin-bottom: 30px;
+  }
+  
+  .item .item-wrap {
+    display: block;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .item .item-wrap:after {
+    z-index: 2;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(28, 53, 86, 0.9);
+    visibility: hidden;
+    opacity: 0;
+    transition: .3s all ease-in-out;
+  }
+  
+  .item .item-wrap img {
+    transition: .3s transform ease;
+    transform: scale(1);
+  }
+  
+  .item .item-wrap > .work-info {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    z-index: 3;
+    transform: translateY(-50%);
+    color: #fff;
+    opacity: 0;
+    visibility: hidden;
+    margin-top: 20px;
+    transition: .3s all ease;
+  }
+  
+  .item .item-wrap > .work-info h3 {
+    font-size: 20px;
+    margin-bottom: 0;
+  }
+  
+  .item .item-wrap > .work-info span {
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+  }
+  
+  .item .item-wrap:hover {
+    text-decoration: none;
+  }
+  
+  .item .item-wrap:hover img {
+    transform: scale(1.05);
+  }
+  
+  .item .item-wrap:hover:after {
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  .item .item-wrap:hover .work-info {
+    margin-top: 0px;
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  /** END OF BUSINESS ITEM SECTION 1 BY 1 // INFO ON HOVER **/
