--- a/public/css/style.css
+++ b/public/css/style.css
@@ -316,3 +316,44 @@ TOP BAR
   }
   
   /** END CALL TO ACTION SECTION**/
+
+  /*HOME INFO SECTION*/
+  .imgRight{
+    margin-top: 2%;
+    margin-left: 6%;
+    color: #1C3556;
+  }
+
+  .imgRight h2{
+    font-size: 45px;
+    line-height: 50px;
+    margin-bottom: 4%;
+  }
+
+  .imgRight p{
+    font-size: 18px;
+    margin-bottom: 10%;
+  }
+
+  .imgRight a{
+    background-color: #1C3556;
+    padding: 3%;
+    /*float: right;*/
+    color: #F2F7ED !important; 
+    border-radius: 8px;
+  }
+
+  .imgRight a:hover{
+    background-color: #477B9D;
+    text-decoration: none;
+
+  }
+  
+  .bg-image {
+    background-image: url('../img/verticalImg.png');
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
+  }
+
+  /*END OF HOME INFO SECTION*/
