--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,8 +138,7 @@ TOP BAR
 .backImg-small h1{
   font-weight: bolder;
   letter-spacing: 2px;
-  color: #ffffff;
-  text-shadow: 2px 2px 6px #0b1522;
+  color: #1C3556;
 }
 
 /** END TITLE PAGE IMAGE BACKGROUND CATEGORIES **/
