--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,22 @@ html, body{
   h3{
     font-size: 30px;
   }
+
+  h5{
+    font-size: 20px;
+    color: #477B9D;
+  }
+
+  .line{
+    content:"";
+    display: inline-block;
+    position: absolute;
+    height: 0.5em;
+    vertical-align: bottom;
+    margin-top: -1%;
+    width: 15vw;
+    border-top: 1px solid #477B9D;
+  }
   
   p{
     font-size: 20px;
