CSS => Fix imgRight class margin

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -366,8 +366,8 @@ TOP BAR
 
   /*HOME INFO SECTION*/
   .imgRight{
-    margin-top: 2%;
-    margin-left: 6%;
+    margin-top: 10%;
+    padding: 2%;
     color: #1C3556;
   }
 
