Public => css, Added Responsive Style to Table

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -646,6 +646,10 @@ svg:hover{
 
     /**CONTACT**/
     .backImg-small{padding: 30% 15%; font-weight: bolder;}
+
+    /**BUSINESS CATEGORIES**/
+    .SubcategoBusi{display: none;}
+    .CategoBusi{display: none;}
     
   }
 
